--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<meta property="og:site_name" content="Polly — Wife of Pax" />
+		<meta property="og:site_name" content="Polly — Wife of Pengu" />
 		<meta name="theme-color" content="#ffffff" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
